--- a/src/app/recipes/recipe-detail/recipe-detail.component.css
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.css
@@ -1,7 +1,8 @@
 img{
-    border: 3px solid #0081A7;
     max-width: 100%;
     height: auto;
+    box-shadow: 0 0 25px rgba(0, 0, 0, 0.6);
+
 }
 
 .main{
@@ -12,7 +13,7 @@ img{
 button{
     margin-bottom: 30px;
     transition: background-color 0.6s ease;
-    font-size: 20px;
+    font-size: 18px;
 
 }
 
@@ -20,16 +21,19 @@ label{
     font-size: 20px;
     color: black;
     margin-bottom: 5px;
+    font-weight: bolder;
 }
 
-.underline {
-    margin-bottom: 20px;
-    border-bottom: 2px solid currentColor;
-    display: inline-block;
-    line-height: 0.85;
-    color: #0081A7;
-    text-shadow:
-      2px -2px white,
-      -2px 2px white,
-      -2px -2px #dad0ce;
-  }
+#recipeName{
+    font-family: 'BerkshireSwash-Regular';
+    font-weight: bold;
+}
+
+p{
+    font-weight: 700;
+    font-size: large;
+}
+
+ul{
+    transition: all 0.6s ease;
+}
