--- a/src/app/recipes/recipes.component.css
+++ b/src/app/recipes/recipes.component.css
@@ -1,6 +1,6 @@
 .scroll{
     max-height: 90vh;
-    overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 .detailContainer{
@@ -10,3 +10,15 @@
     opacity: 0.90;
 
 }
+
+.detailContainer2{
+    background-image: url('../../assets/images/Background4.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    max-height: inherit !important;
+    box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
+    opacity: 0.90;
+
+}
+
